--- a/Website/FrontEnd/src/index.css
+++ b/Website/FrontEnd/src/index.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-    padding: 0;
-    margin: 0;
+body {
+font-family: "Inter", sans-serif;
 }
